# ee_final_project

./: .gitignore  README.md  pyproject.toml
analyze/: digit_pair_probabilities.m  digit_probabilities.m  ks.m  pdf.m
deploy/gan/: Dockerfile
ee_final_project/: __main__.py  env.py  main.py
ee_final_project/dataset_creation/: create_dataset.py  create_multi_digit_dataset.py  dataset_base.py  multi_digit_dataset.ipynb  multi_digit_mnist_dataset_with_distribution.ipynb  number_dataset.py
ee_final_project/dataset_creation/scripts/: multi_digit_dataset.ipynb  multi_digit_mnist_dataset_with_distribution.ipynb
ee_final_project/gan/: gan_base.py  generate_multi_digit_synthetic_dataset.ipynb  generate_synthetic_dataset.py  multi_digit_mnist_gan.ipynb  single_digit_mnist_gan.ipynb  train_gan.py
ee_final_project/gan/scripts/: generate_multi_digit_synthetic_dataset.ipynb  multi_digit_mnist_gan.ipynb  single_digit_mnist_gan.ipynb
ee_final_project/ocr/: multi_digit_ocr_v1.ipynb  multi_digit_ocr_v2.ipynb  ocr.py  single_digit_ocr.ipynb
ee_final_project/ocr/model/: mnist_ocr_model
ee_final_project/ocr/scripts/: better_synthetic_dataset_ocr_evaluate.ipynb  multi_digit_ocr_v2.ipynb  single_digit_ocr.ipynb  synthetic_dataset_ocr_evaluate.ipynb
