[tool.poetry]
name = "ee-final-project"
version = "0.1.0"
description = ""
authors = ["maxgmaxg <max@laminarsecurity.com>"]
readme = "README.md"
packages = [{include = "ee_final_project"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
notebook = "^6.5.3"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
